# SU2xSU2

./: .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  examples.py  pyproject.toml  requirements.txt  scientific.mplstyle  setup.cfg
docs/source/: SU2xSU2.rst  conf.py  index.rst  usage.rst
src/SU2xSU2/: SU2_mat_routines.py  SU2xSU2.py  __init__.py  analysis.py  asymptotic_scaling.py  calibrate_paras.py  corfunc_processing.py  correlations.py  coupling_expansion.py  critical_slowingdown.py  my_tests.py  plot_polishing.py  plotting.py
src/SU2xSU2/data/chain_state/: readme.txt
src/SU2xSU2/data/corfuncs/: readme.txt
src/SU2xSU2/data/corfuncs/rawchains/: readme.txt
src/SU2xSU2/data/slowdown/rawchains/: readme.txt
src/SU2xSU2/plots/corfuncs/: readme.txt
src/SU2xSU2/plots/corfuncs/effective_mass/: readme.txt
tests/: test_matrix_routines.py  test_simulation.py
