[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "SU2xSU2"
version = "1.0"
authors = [
  { name="Julian Wack", email="julianfriedrichwack@gmail.com" },
]
description = "Hybrid Monte Carlo with Fourier Acceleration simulation package for the N=2 Principal Chiral model."
keywords = ["Hybrid Monte Carlo", "Fourier Acceleration", "Principal Chiral model"]
readme = "README.md"
requires-python = ">=3.11.4"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]

[project.urls]
Repository = "https://github.com/JulianWack/SU2xSU2"
# Documentation = " "