[metadata]
name = SU2xSU2
version = 1.4
author = Julian Wack
author_email = julianfriedrichwack@gmail.com
project_urls = 
    Source = https://github.com/JulianWack/SU2xSU2
    Documentation = https://su2xsu2.readthedocs.io/
download_url = https://pypi.org/project/SU2xSU2/
description = Hybrid Monte Carlo with Fourier Acceleration simulation package for the N=2 Principal Chiral model.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = 
    Hybrid Monte Carlo
    Fourier Acceleration
    Principal Chiral model
license = MIT
license_files = LICENCE
platform = any
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
python_requires = >=3.11.4
install_requires =
    numpy
    matplotlib
    scipy

[options.packages.find]
where=src